포스트 수정

--- a/_posts/2020-12-13-DFS-BFS.markdown
+++ b/_posts/2020-12-13-DFS-BFS.markdown
@@ -63,3 +63,7 @@ while target:
 ![BFS_6](/assets/img/DBFS/BFS_6.png)
 ![BFS_7](/assets/img/DBFS/BFS_7.png)
 ![BFS_8](/assets/img/DBFS/BFS_8.png)
+
+## 시각화 코드
+
+[깃헙](https://github.com/Roharui/BFS_DFS)에서 코드를 확인할수 있습니다.
